14. Add option to control whether scrollbar groove has a border or not.
15. Dont use pixmaps to draw rounded slider, or radio buttons.
16. Add option to increase size of check/radios - default is now 15pixels.
    (For Mozilla apps, the old 13pixel size will be used).
17. Fix calculation of alpha values for square rings.
18. Fix progressbar glow central position.
19. Draw more frames.

1.1.1
-----
1. Alter alpha settings of square rings.
2. Fix progressbar glow sometimes disappearing with Firefox.

1.1.0
-----
1. Add option to not embolden progressbar text.
2. Add option to allow coloured mouse over for toolbar buttons.
3. Add option to border selection.
4. Add option to draw square rings on background.

1.0.2
-----
1. Apply cygwin patches from Yaakov S - use MODULE istead of SHARED.
2. For older mozilla apps, if menuitem style is set to fade, then use flat.
3. Map edit-select-all.png to gtk-select-all
4. Fix check, radio, expander, and splitter background highlighting - forgot
   to convert configured value to a percentage!
5. If using a background gradient, or cannot determine a widget's parent's
   background colour - use a 10% alpha white as the etch colour.

1.0.1
-----
1. Fix crash when colouring selected checks and radios, shading sliders, and
   non coloured default buttons.

1.0.0
-----
 1. Added option to colour selected check/radios.
 2. Added option to use a smaller dot for radios.
 3. Made check/radio and splitter highlight options a configurable % - i.e.
    not based on standard hightlight %
 4. Added option to set expander highlight factor.
 5. When highlighting check/radio/splitter/expander background, round the corners and
    use the selection gradient.
 6. Default check/radio/splitter/expander highlight set to 3%
 7. Added new splitter/handle/thumb style: single dot.
 8. Don't do coloured mouse over for buttons of editable combos, spin buttons,
    or scrollbar buttons.
 9. Don't do regular coloured mouse over of sliders when these are set to be